[package]
name = "gilder"
version = "0.1.0"
edition = "2021"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
repository = "https://github.com/carrotflakes/gilder"
keywords = ["testing", "assert"]
description = "Golden testing library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
