[package]
name = "gilder"
version = "0.1.3"
edition = "2021"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/carrotflakes/gilder"
keywords = ["testing", "assert"]
description = "Golden testing library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
